--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.laazer.sunshine.app.MainActivity$PlaceholderFragment">
+    tools:context="com.laazer.sunshine.app.MainActivity.ForcastFragment">
 
     <ListView
         android:id="@+id/listview_forecast"
