--- a/app/src/main/res/xml/pref_headers_legacy.xml
+++ b/app/src/main/res/xml/pref_headers_legacy.xml
@@ -1,3 +1,10 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--<header-->
+            <!--android:fragment="com.example.prefs.SettingsFragmentOne"-->
+            <!--android:title="@string/prefs_category_one"-->
 
-</PreferenceScreen>
+    <!--<header-->
+            <!--android:fragment="com.example.prefs.SettingsFragmentTwo"-->
+            <!--android:title="@string/prefs_category_two"-->
+            <!--android:summary="@string/prefs_summ_category_two" />-->
+</preference-headers>
