--- a/app/src/main/res/menu/forcastfragment.xml
+++ b/app/src/main/res/menu/forcastfragment.xml
@@ -6,4 +6,7 @@
           android:title="@string/refresh"
           android:showAsAction="never"
           />
+    <item android:id="@+id/view_location"
+          android:title="View Location"
+          android:showAsAction="ifRoom"/>
 </menu>
