added image-icons for actionbar

--- a/app/src/main/res/menu/detailfragment.xml
+++ b/app/src/main/res/menu/detailfragment.xml
@@ -5,5 +5,7 @@
     <item android:id="@+id/menu_item_share"
           android:showAsAction="ifRoom"
           android:title="Share"
-          android:actionProviderClass= "android.support.v7.widget.ShareActionProvider" />
+          android:icon="@drawable/ic_action_share"
+          android:actionProviderClass= "android.support.v7.widget.ShareActionProvider"
+          app:showAsAction="ifRoom"/>
 </menu>
