--- a/app/src/main/res/menu/forcastfragment.xml
+++ b/app/src/main/res/menu/forcastfragment.xml
@@ -2,11 +2,16 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/view_location"
+          android:icon="@drawable/ic_action_place"
+          android:title="@string/view_location"
+          app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_settings"
+          android:title="@string/action_settings"
+          android:icon="@drawable/ic_action_settings"
+          app:showAsAction="ifRoom" />
     <item android:id="@+id/refresh"
           android:title="@string/refresh"
-          android:showAsAction="never"
-          />
-    <item android:id="@+id/view_location"
-          android:title="View Location"
-          android:showAsAction="ifRoom"/>
+          android:icon="@drawable/ic_action_refresh"
+          app:showAsAction="never"/>
 </menu>
