--- a/app/src/main/res/values/strings_activity_settings.xml
+++ b/app/src/main/res/values/strings_activity_settings.xml
@@ -66,4 +66,7 @@
     <string name="pref_pick_unit_key">Select Units</string>
     <string name="pref_pick_unit_title">Select Units</string>
 
+    <string name="pref_units_metric">Metric</string>
+    <string name="pref_units_imperial">Imperial</string>
+    <string name="pref_location_default">90210</string>
 </resources>
