--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,43 +1,20 @@
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<?xml version="1.0" encoding="utf-8"?>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
+    <EditTextPreference
+        android:title="@string/pref_location_label"
+        android:key="@string/pref_location_key"
+        android:defaultValue="@string/pref_location_default"
+        android:inputType="text"
+        android:singleLine="true" />
 
-    <CheckBoxPreference
-        android:key="example_checkbox"
-        android:title="@string/pref_title_social_recommendations"
-        android:summary="@string/pref_description_social_recommendations"
-        android:defaultValue="true" />
-
-    <PreferenceCategory
-            android:title="@string/pref_title_location_settings"
-            android:key="@string/pref_location_settings_key">
-    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
-    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-            <EditTextPreference
-                android:key="@string/pref_zip_code_entry_key"
-                android:title="@string/pref_zip_code_entry_title"
-                android:hint="@string/pref_enter_zip_code"
-                android:defaultValue="90210"
-                android:selectAllOnFocus="true"
-                android:inputType="number"
-                android:singleLine="true"
-                android:maxLines="1"
-                android:maxLength="5"/>
-    </PreferenceCategory>
-
-    <PreferenceCategory
-            android:title="@string/pref_unit_title"
-            android:key="@string/pref_unit_key">
-    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-         dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-        <ListPreference
-            android:key="@string/pref_pick_unit_key"
-            android:title="@string/pref_pick_unit_title"
-            android:defaultValue="Fahrenheit"
-            android:entries="@array/pref_temp_list_titles"
-            android:entryValues="@array/pref_temp_list_values"
-            android:negativeButtonText="@null"
-            android:positiveButtonText="@null" />
-    </PreferenceCategory>
+    <ListPreference
+        android:title="@string/pref_units_label"
+        android:key="@string/pref_units_key"
+        android:defaultValue="@string/pref_units_metric"
+        android:entryValues="@array/pref_units_values"
+        android:entries="@array/pref_units_options" />
 
 </PreferenceScreen>
